# face_matching_mvp

./: .gitattributes  .gitignore  README.md  app.py  facescrub_metadata.csv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: main.yml
data/: milvus_face_data.db
models/: MobileFaceNet.onnx
scripts/: prepare_database.py  run_app.py
src/face_matcher/: __init__.py  config.py
src/face_matcher/core/: __init__.py  database.py  detection.py  recognition.py
src/face_matcher/ui/: __init__.py  gradio_app.py
src/face_matcher/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py  test_database.py  test_detection.py  test_recognition.py
